# Wheel_Leg

./: .gitignore  Ja.m  Jb.m  LQR_K.m  MUJOCO_LOG.TXT  README.md  S_mat.m  SupportDetection.m  arc.txt  leg_data.txt  prompt.txt
doc/: AGENTS.md  architecture.md  decisions.md  detail.md  prompt.md  proposal.md  validation.md
doc/iterations/: iter-001.md  iter-002.md  iter-003.md  iter-004.md
doc/tasks/: actuator_writer.md  algorithm_library_extraction.md  control_tuning.md  controller_orchestration.md  imu_publisher.md  interface_constraints.md  joint_command_subscriber.md  joint_state_publisher.md  mujoco_bridge.md  progress.md  rc_command_mapping.md  rc_ibus_node.md  sim_adapter_extraction.md
docs/: 100hz_balance_notes.md  README.md  architecture.md  build_profiles.md  control_stm_migration_plan.md  hardware_control_200hz.md  leg_angle_mapping.md  migration.md  progress.md  protocol.md  runbook.md  stm32_hardware_integration.md  stm32_ros_comm_task.md
docs/doc/: decisions.md  prompt.md  proposal.md  validation.md
docs/doc/iterations/: iter-001.md  iter-004.md  iter-005.md
docs/doc/tasks/: 500hz_to_100hz_balance_notes.md  actuator_writer.md  algorithm_library_extraction.md  control_rate_100hz.md  imu_publisher.md  mujoco_bridge.md  (+5 more)
firmware/stm32/: .mxproject  wheel_leg_robort.ioc
logs/stm32_state_capture/: analysis_notes.md  imu_static.csv  imu_static.summary.txt  joints_dynamic.csv  joints_dynamic.summary.txt  joints_dynamic_lpf.csv  joints_dynamic_lpf.summary.txt  joints_dynamic_lpf_fast.summary.txt  joints_dynamic_lpf_slow.summary.txt  joints_static.csv  joints_static.summary.txt  joints_static_lpf.csv  joints_static_lpf.summary.txt  leg_dynamic.csv  leg_dynamic.summary.txt  leg_static.csv  leg_static.summary.txt  length_raw_vs_lpf.summary.txt  phi_raw_vs_lpf.summary.txt
ros2_ws/src/wheel_leg_bridge/: CMakeLists.txt  package.xml
ros2_ws/src/wheel_leg_bridge/include/wheel_leg_bridge/: message_conversions.hpp
ros2_ws/src/wheel_leg_bridge/src/: message_conversions.cpp
ros2_ws/src/wheel_leg_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/wheel_leg_bringup/config/: control_hw.yaml  control_sim.yaml
ros2_ws/src/wheel_leg_bringup/launch/: hw.launch.py  rc.launch.py  sim.launch.py
ros2_ws/src/wheel_leg_control/: CMakeLists.txt  package.xml
ros2_ws/src/wheel_leg_control/include/wheel_leg_control/: controller_orchestrator.hpp  stand_algorithm_interfaces.hpp  stand_control_pipeline.hpp  stand_control_runtime.hpp  stand_control_types.hpp  stand_runtime_defaults.hpp
ros2_ws/src/wheel_leg_control/src/: controller_node.cpp  controller_orchestrator.cpp  stand_control_pipeline.cpp  stand_control_runtime.cpp  state_assembler.cpp
ros2_ws/src/wheel_leg_control/test/: test_stand_control_pipeline.cpp
ros2_ws/src/wheel_leg_hw/: CMakeLists.txt  package.xml
ros2_ws/src/wheel_leg_hw/include/wheel_leg_hw/: interface_contract.hpp
ros2_ws/src/wheel_leg_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/wheel_leg_msgs/msg/: BodyCommand.msg  JointCommand.msg  RcStatus.msg
ros2_ws/src/wheel_leg_rc/: CMakeLists.txt
ros2_ws/src/wheel_leg_rc/src/: rc_ibus_node.cpp  rc_serial_probe_node.cpp
ros2_ws/src/wheel_leg_sim/: package.xml
ros2_ws/src/wheel_leg_sim/include/wheel_leg_sim/: attitude_utils.hpp  command_application.hpp  leg_kinematics.hpp  sensor_types.hpp  sim_adapter.hpp  state_builders.hpp
ros2_ws/src/wheel_leg_sim/src/: leg_kinematics.cpp  leg_state_assembly.cpp
ros2_ws/src/wheel_leg_stm32_bridge/: CMakeLists.txt  package.xml
ros2_ws/src/wheel_leg_stm32_bridge/include/wheel_leg_stm32_bridge/: hardware_state_assembler.hpp
ros2_ws/src/wheel_leg_stm32_bridge/src/: hardware_state_assembler.cpp  joint_command_probe_node.cpp  stm32_bridge_node.cpp  stm32_uart_stress_node.cpp
ros2_ws/src/wheel_leg_stm32_bridge/test/: test_hardware_state_assembler.cpp
scripts/: build.sh  env.sh  flash_stm32.sh  run.sh  run_host.sh  run_pi.sh
sim/mujoco/: README.md
src/wheel_leg_control/: CMakeLists.txt  package.xml
src/wheel_leg_control/include/wheel_leg_control/: controller_orchestrator.hpp  function_algorithm_adapters.hpp  legacy_algorithms.hpp  ros_control_state_estimator.hpp  stand_control_pipeline.hpp  stand_control_runtime.hpp  stand_control_types.hpp  stand_runtime_defaults.hpp  state_assembler.hpp  state_message_conversions.hpp
src/wheel_leg_control/src/: controller_node.cpp  controller_orchestrator.cpp  legacy_algorithms.cpp  ros_control_state_estimator.cpp  stand_control_pipeline.cpp  stand_control_runtime.cpp  state_assembler.cpp  state_message_conversions.cpp
src/wheel_leg_msgs/: CMakeLists.txt  package.xml
src/wheel_leg_rc/: CMakeLists.txt  package.xml
src/wheel_leg_sim/: CMakeLists.txt  package.xml
src/wheel_leg_sim/include/wheel_leg_sim/: base_state_assembly.hpp  control_state_bridge.hpp  joint_mappings.hpp  leg_state_assembly.hpp  mapping_utils.hpp  robot_state_assembly.hpp
src/wheel_leg_sim/src/: attitude_utils.cpp  base_state_assembly.cpp  command_application.cpp  control_state_bridge.cpp  leg_kinematics.cpp  mapping_utils.cpp  robot_state_assembly.cpp  state_builders.cpp
tools/: rc_channel_watch.py  stm32_state_capture.py  turn_leg_balance_capture.py  turn_sign_capture.py  uart_frame_sender.py  uart_loopback.py
transplant/mujoco_win/: simulate_gpu.sh  腿部数据.txt
transplant/mujoco_win/simulate/: CMakeLists.txt  framework.txt
transplant/mujoco_win/simulate/app/: main.cc
transplant/mujoco_win/simulate/matlab_function/: EKF.m  LQR_K.m  VMC.m  phi_L0.m  test.m
transplant/mujoco_win/simulate/mujoco_ui/: simulate.cc
transplant/mujoco_win/simulate/tools/: actuator.cc  ekf.cc  ekf.h  lqr_k.cc  lqr_k.h  math_utils.cc  math_utils.h  pid.cc  plotter.cc  plotter.h  sensor.cc  sensor.h  transplant.md  vmc.cc  vmc.h
transplant/mujoco_win/simulate/wheel_leg/: controller_orchestration.cc  controller_orchestration.h  ros2_bridge.cc  ros2_bridge.h  sim_adapter.cc  sim_adapter.h  wheel_leg_hooks.cc  wheel_leg_hooks.h
transplant/paper/: 腿部数据.txt
transplant/wetbot_ref/: balance.c  balance.h  fly_detection.h  lqr_calc.h  speed_estimation.h
(+1003 files in other folders)
