<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wheel_leg_bringup</name>
  <version>0.0.0</version>
  <description>Launch and runtime entrypoints for wheel-leg robot modes.</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>wheel_leg_control</exec_depend>
  <exec_depend>wheel_leg_rc</exec_depend>
  <exec_depend>wheel_leg_stm32_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
