<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wheel_leg_hw</name>
  <version>0.0.0</version>
  <description>Unified hardware interface contracts for simulation and STM32 backends.</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
