<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wheel_leg_sim</name>
  <version>0.0.0</version>
  <description>Simulation adapter boundaries for the wheel-leg robot.</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>wheel_leg_common</depend>
  <depend>wheel_leg_control</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
